# Vantage

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  README.md  RELEASE_MANIFEST.md  SPECS.md  SUPPORTED_FORMATS.md  VANTAGE.SEAL  VANTAGE_CONTRACT.md  bootstrap_agent.yaml  check_dbs.py  debug_kit.py  debug_recall.py  diff_report.json  kit-vantage.bat  kit.manifest  out1.json  runtime_call_graph.json  test_integrity.py  test_python_complex.py  vantage-shim.bat  verify_deep.py
.agent/skills/rust_mcp_development/: SKILL.md
.github/workflows/: ci.yml
.kit/: AGENTS.md  context
archive/: distillation_map.md
archive/obsolete/: main.rs  parser.rs  pdf_gen.rs
archive/old_code/: vantage-mcp.json  vantage.manifest.yaml
archive/old_code/vantage-cli/: Cargo.toml
archive/old_code/vantage-core/: Cargo.toml
archive/old_code/vantage-core/src/: lib.rs
archive/old_code/vantage-core/src/intent/: mod.rs  validation.rs
archive/old_code/vantage-view/: Cargo.toml
archive/old_code/vantage-view/src/: lib.rs
archive/raw/2026-03-24_pre_distillation/: TEST_EXPORT.md  python_mapping.md  signal_schema.md  thin-client-architecture.md
cli/: Cargo.toml  build_errors.txt
cli/src/: dispatch.rs  kit_integration.rs  main.rs  term.rs
contracts/: cli_output.json
core/: Cargo.toml  VANTAGE.SEAL  failing_source.rs  test_sample.rs  v1_2_4_seal.rs
core/proptest-regressions/cognition/: tests_rigorous.txt
core/src/: analytics.rs  constitution.rs  drift.rs  graph.rs  lib.rs  tirl.rs
core/src/cognition/: claim.rs  decision.rs  enforcer.rs  label.rs  lens.rs  mod.rs  pipeline.rs  tests_rigorous.rs
core/src/drift_engine/: engine.rs
core/src/extractor/: emitter.rs  mod.rs  pipeline.rs  python.rs  walker.rs
core/src/fingerprint/: hasher.rs  mod.rs
core/src/intent/: mod.rs  validation.rs
core/src/invariant_engine/: engine.rs
core/src/normalizer/: adapter.rs  mod.rs
core/src/parser/: common.rs  intent_extractor.rs  mod.rs  python.rs  rust.rs
core/tests/: benchmark_suite.rs  boundary_suite.rs  cognition_fuzz.proptest-regressions  cognition_fuzz.rs  death_suite.rs  death_tests.rs  edge_audit.rs  export_pdf.rs  forensic_identity.rs  forensic_invariants.rs  forensic_registry.rs  golden_repos.rs  reproducibility.rs  stability.proptest-regressions  stability.rs
core/tests/repos/mixed_system/api/: server.py
core/tests/repos/mixed_system/backend/src/: arena.rs  lib.rs  processor.rs
core/tests/repos/mixed_system/frontend/src/components/: ArenaPage.tsx
core/tests/repos/mixed_system/scripts/: deploy.rb
core/tests/repos/python_core/core/: __init__.py  arena.py  memory.py  scheduler.py
core/tests/repos/ruby_core/lib/: arena.rb  memory.rb  scheduler.rb
core/tests/repos/rust_core/src/: arena.rs  graph.rs  memory.rs  scheduler.rs
core/tests/repos/tsx_frontend/src/components/: App.tsx  ArenaView.tsx
core/tests/repos/tsx_frontend/src/hooks/: useArena.ts
docs/: README.md  VANTAGE_CONTRACT.md  VANTAGE_SPEC.md  architecture.md
examples/: VANTAGE.SEAL  smoke_test.py
examples/python/: simple.py
examples/rust/: no_anchor.rs  simple.rs
kit/: AGENTS.md  kit-vantage.bat  kitf.ps1  reference.md
scripts/: integrity_check.ps1  integrity_check.sh  kitf.ps1  test_dashboard.ps1  vantage_dashboard.ps1  vantage_provision.ps1
specs/: signal_schema.md  silicon_constitution.md
tests/golden/: VANTAGE.SEAL  python_sample.golden.json  python_sample.py  rust_sample.golden.json  rust_sample.rs
tests/golden/drift/: baseline.rs  current.rs  expected_drift.json
tools/: vantage-shim.bat
types/: Cargo.toml
types/src/: arena.rs  caf.rs  collision.rs  dirty_propagation.rs  drift_graph.rs  edge.rs  graph.rs  hash.rs  identity_anchor.rs  incremental.rs  intent.rs  introspection.rs  introspection_registry.rs  introspection_tests.rs  invariant.rs  invariant_spec.rs  lib.rs  node_id.rs  node_stamp.rs  role_resolver.rs  semantic.rs  semantic_role.rs  signal.rs  symbol.rs  symbol_id.rs  telemetry.rs  uir.rs  version.rs
vantage-cli/src/: dispatch.rs  main.rs
vantage-core/tests/: export_pdf.rs
vantage-mcp/: Cargo.toml
vantage-mcp/src/: main.rs
vantage-view/src/: spatial_hud.rs
