[package]
name = "vantage-cli"
version = "1.2.4"
edition = "2024"
description = "CLI Adapter for Vantage Cognitive Artifact Factory"

[[bin]]
name = "vantage"
path = "src/main.rs"

[dependencies]
# Core dependency
vantage-core = { path = "../core" }
vantage-types = { path = "../types" }

# CLI parsing (Ultra-Lean: minimal features for zero-lag)
clap = { version = "4.5", default-features = false, features = ["std", "derive", "help", "usage", "error-context"] }

# Error handling
anyhow = "1.0"

# Observability (Pruned: No Async, minimal tracing)
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["std", "fmt", "env-filter", "ansi"] }

# JSON & Serialization (Mandatory for Kit Integration)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# High-performance directory walking
ignore = "0.4"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.10"
