[package]
name = "vantage-core"
version = "1.2.3"
edition = "2021"
description = "Vantage Structural Sensor - CLI single-shot executable for code abstraction"
license = "MIT OR Apache-2.0"

[[bin]]
name = "vantage-verify"
path = "src/bin/vantage-verify.rs"

[dependencies]
# Vantage is a specialized Structural Code & Config Sensor.
# Office document support removed in v1.2.3 (Pruning Noise).
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
vantage-types = { path = "../types" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.9"
chrono = { version = "0.4", features = ["serde"] }
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"

[dev-dependencies]
proptest = "1.0"
