[package]
name = "vantage-types"
version = "1.2.4"
edition = "2024"
description = "Authority Contracts and Shared Types for Vantage - Cognitive Intent Protocol and Constitutional Framework"
license = "MIT OR Apache-2.0"
keywords = ["types", "authority", "cognitive", "protocol", "constitution"]
categories = ["data-structures", "development-tools"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
uuid = { version = "1.1", features = ["serde", "v4"] }
thiserror = "1.0"
