[package]
name = "vantage-types"
version = "1.2.4"
edition = "2024"
description = "Authority Contracts and Shared Types for Vantage - Cognitive Intent Protocol and Constitutional Framework"
license = "MIT OR Apache-2.0"
keywords = ["types", "authority", "cognitive", "protocol", "constitution"]
categories = ["data-structures", "development-tools"]

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
thiserror = "1.0"
sha2 = "0.10"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
