[package]
name = "vantage-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
rust-mcp-sdk = { version = "0.8.0", features = ["server"] }
anyhow = "1.0"
vantage-core = { path = "../vantage-core" }

[[bin]]
name = "vantage_mcp"
path = "src/main.rs"
