[package]
name = "vantage-core"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
rust-mcp-sdk = "0.8.0"
calamine = "0.32"
docx-rs = "0.4"
pulldown-cmark = "0.10"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
printpdf = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

