[package]
name = "vantage-view"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "vantage_hud"
path = "src/bin/hud.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
rust-mcp-sdk = "0.8.1"
vantage-core = { path = "../vantage-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
